[package]
name = "bencher"
version = "0.1.0"
authors = ["Zeke Medley <zekemedley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For serving files.
rocket = "0.4.6"
# For requesting files that are being served.
reqwest = { version = "0.10", features = ["blocking", "json"] }
# For reading config information
toml = "0.4.2"
serde = "1.0"
serde_derive = "1.0.117"
# For parsing ping output
regex = "1"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["serve"]